Fixed deprecated url handling