@@ -1,13 +1,12 @@
 package org.mries.enderbag.util;
 
-import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.Scanner;
+import java.util.function.Consumer;
 
 import org.bukkit.Bukkit;
 import org.bukkit.plugin.java.JavaPlugin;
-import org.bukkit.util.Consumer;
 
 // From: https://www.spigotmc.org/wiki/creating-an-update-checker-that-checks-for-updates
 public class UpdateChecker {
@@ -21,14 +20,15 @@ public class UpdateChecker {
 
     public void getVersion(final Consumer<String> consumer) {
         Bukkit.getScheduler().runTaskAsynchronously(this.plugin, () -> {
-            try (InputStream inputStream = new URL(
-                    "https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId + "?").openStream();
+            try (InputStream inputStream = new URI(
+                    "https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId + "?").toURL()
+                    .openStream();
                     Scanner scanner = new Scanner(inputStream)) {
                 if (scanner.hasNext()) {
                     consumer.accept(scanner.next());
                 }
-            } catch (IOException exception) {
-                plugin.getLogger().info("Unable to check for updates: " + exception.getMessage());
+            } catch (Exception exception) {
+                exception.printStackTrace();
             }
         });
     }
